2004-09-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c src/util3d.h: Add a text_label pointer to the p_vertex
	structure in order to support labels in hidden3d mode.

	* hidden3d.c (build_networks draw_vertex): Add code to handle plot style
	"with labels" in hidden3d mode.

	* demo/world2.dem demo/srl.dat: New demo to show use of labels with pm3d
	colors and hidden3d mode.

	* demo/all.dem demo/Makefile.am.in: Add vector.dem and world2.dem.

2004-09-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (get_offsets place_labels) src/graphics.h:
	Simplify place_labels by calling a new shared routine.
	Move the support routine get_offsets into gadgets.c as well.

	* src/graph3d.c (plot_labels3d): Simplify place_labels3d by calling
	a new shared routine.
	
	* src/gadgets.c (get_offsets write_label) src/gadgets.h:
	New routine write_label that is shared by both the 2D and 3D code.

	* demo/fit.dem demo/vector.dem demo/histograms2.dem:
	Revise demo instructions slightly to work with the webify script.

	* demo/webify.pl: Use "pause 0" in demo scripts to signal that the
	output file needs to be reset during web page generation.

	* demo/Makefile.am.in: Update list of demos to include in web page
	generation ("make html").

2004-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: --enable-with-image requires both pm3d and binary file
	support. Enforce this in the configure script by not allowing with-image
	to be enabled if the other two options have not also been enabled.

2004-09-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix documentation for multiplot.

	* src/term.c: Better error message for an invalid option of multiplot.

2004-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Fix some minor errors that interfered with 
	latex processing.

2004-09-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot plot3d_vectors) src/graph3d.h 